--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,10 @@
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #    prefix:   /_internal
 
+vince_t_admin:
+    resource: "@VinceTAdminBundle/Resources/config/routing.yml"
+    prefix:   /
+
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
