--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,7 +14,8 @@ framework:
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
-    trust_proxy_headers: false # Whether or not the Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
+    trust_proxy_headers: false # Deprecated in 2.0; will be removed in 2.3 (used trusted_proxies instead)
+    trusted_proxies: ~
     session:         ~
 
 # Twig Configuration
@@ -60,6 +61,7 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+
 sonata_block:
     default_contexts: [cms]
     blocks:
@@ -67,7 +69,6 @@ sonata_block:
             contexts:   [admin]
 
         sonata.block.service.text:
-        sonata.block.service.action:
         sonata.block.service.rss:
 
 fos_user:
@@ -78,6 +79,23 @@ fos_user:
     group:
         group_class: Application\Sonata\UserBundle\Entity\Group
 
+sonata_user:
+    security_acl: true
+    manager_type: orm # can be orm or mongodb
+
+
+sonata_admin:
+    title:      Sonata Project
+    title_logo: /bundles/sonataadmin/logo_title.png
+    templates:
+        # default global templates
+        layout:  SonataAdminBundle::standard_layout.html.twig
+        ajax:    SonataAdminBundle::ajax_layout.html.twig
+
+        # default actions templates, should extend a global templates
+        list:    SonataAdminBundle:CRUD:list.html.twig
+        show:    SonataAdminBundle:CRUD:show.html.twig
+        edit:    SonataAdminBundle:CRUD:edit.html.twig
 
 vince_t_admin:
     default_theme: default
