--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,11 @@
 # Internal routing configuration to handle ESI
+# ****** WARNING ******
+# This route should be enabled with caution as it can open a security vulnerability
+# see http://symfony.com/blog/security-release-symfony-2-0-20-and-2-1-5-released for more information
+# ****** WARNING ******
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #    prefix:   /_internal
-
-vince_t_admin:
-    resource: "@VinceTAdminBundle/Resources/config/routing.yml"
-    prefix:   /
-
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
@@ -15,6 +14,15 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
 sonata_user:
     resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
     prefix: /admin
+
+vince_t_admin:
+    resource: "@VinceTAdminBundle/Resources/config/routing.yml"
+    prefix:   /
+
+vince_t_admin_configuration:
+    resource: "@VinceTAdminConfigurationBundle/Resources/config/routing.yml"
+    prefix:   /
