--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,6 +10,8 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        SONATA:
+            - ROLE_SONATA_PAGE_ADMIN_PAGE_EDIT  # if you are using acl then this line must be commented
 
     providers:
         in_memory:
@@ -19,6 +21,9 @@ security:
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
         fos_userbundle:
             id: fos_user.user_manager
+
+    acl:
+        connection: default
 
     firewalls:
         # -> custom firewall for the admin area of the URL
@@ -39,8 +44,6 @@ security:
 
             anonymous:    true
         # -> end custom configuration
-
-        # defaut login area for standard users
         main:
             switch_user:        true
             context:            user
@@ -51,9 +54,27 @@ security:
                 use_forward:    false
                 check_path:     /login_check
                 failure_path:   null
-                use_referer:    true
             logout:             true
             anonymous:          true
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
+        login:
+            pattern:  ^/demo/secured/login$
+            security: false
+
+        secured_area:
+            pattern:    ^/demo/secured/
+            form_login:
+                check_path: /demo/secured/login_check
+                login_path: /demo/secured/login
+            logout:
+                path:   /demo/secured/logout
+                target: /demo/
+            #anonymous: ~
+            #http_basic:
+            #    realm: "Secured Demo Area"
 
     access_control:
         # URL of FOSUserBundle which need to be available to anonymous users
