--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "sonata-project/intl-bundle": "master",
         "sonata-project/user-bundle": "master",
         "simplethings/entity-audit-bundle": "master",
-        "vincet/admin-bundle": "master"
+        "vincet/admin-bundle": "master",
+        "vincet/admin-configuration-bundle": "master"
     },
     "scripts": {
         "post-install-cmd": [
