--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,9 @@
         "kriswallsmith/assetic": "1.1.*@dev",
         "sonata-project/admin-bundle": "2.1.*@dev",
         "sonata-project/user-bundle": "2.1.*@dev",
-        "sonata-project/intl-bundle": "2.1.x-dev",
+        "sonata-project/intl-bundle": "2.1.0",
         "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
         "simplethings/entity-audit-bundle": "dev-master",
-        "vincet/base-bundle": "dev-master",
-        "vincet/admin-bundle": "dev-master",
         "vincet/admin-configuration-bundle": "dev-master"
     },
     "scripts": {
