--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,10 @@
         "sonata-project/intl-bundle": "2.1.0",
         "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
         "simplethings/entity-audit-bundle": "dev-master",
+        "trsteel/ckeditor-bundle": "dev-master",
+        "vincet/base-bundle": "dev-master",
+        "vincet/admin-bundle": "dev-master",
+        "vincet/bootstrap-form-bundle": "dev-master",
         "vincet/admin-configuration-bundle": "dev-master"
     },
     "scripts": {
