--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
         "simplethings/entity-audit-bundle": "dev-master",
         "trsteel/ckeditor-bundle": "dev-master",
-        "vincet/base-bundle": "dev-master",
+        "vincet/base-bundle": "2.1.*@dev",
         "vincet/admin-bundle": "2.1.*@dev",
         "vincet/bootstrap-form-bundle": "dev-master",
         "vincet/admin-configuration-bundle": "2.1.*@dev"
