--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "autoload": {
         "psr-0": { "": "src/" }
     },
-    "require": {        "php": ">=5.3.3",
+    "require": {
+        "php": ">=5.3.3",
         "symfony/symfony": "2.2.*",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "1.2.*",
