iUpdate composer.json

--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "knplabs/knp-menu-bundle": "1.1.*@dev",
         "simplethings/entity-audit-bundle": "dev-master",
         "trsteel/ckeditor-bundle": "dev-master",
-        "vincet/base-bundle": "dev-master",
-        "vincet/admin-bundle": "dev-master",
+        "vincet/base-bundle": "2.2.*@dev",
+        "vincet/admin-bundle": "2.2.*@dev",
         "vincet/bootstrap-form-bundle": "dev-master",
-        "vincet/admin-configuration-bundle": "dev-master"
+        "vincet/admin-configuration-bundle": "2.2.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
